# hardware_skinning

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hardware_skinning  main.cpp  main.h
assets/: dancer.dae  head.dae  quetzal.dae  seagull.dae  suzanne.dae  suzanney.dae
camera/: camera.cpp  camera.h
input/: input.h
mesh/: bone.frag  bone.vert  mesh.cpp  mesh.frag  mesh.h  mesh.vert
platform/: glfw_launcher.cpp  glfw_launcher.h  hardware.h  input.h
skybox/: skybox.cpp  skybox.frag  skybox.h  skybox.vert
utils/io/: shader_loader.cpp  shader_loader.h  stb_image.cpp  stb_image.h  stb_image_write.cpp  texture.cpp  texture.h  video.cpp  video.h
utils/log_utils/: logger.cpp  logger.h
utils/math_utils/: maths_funcs.cpp  maths_funcs.h  quat_funcs.cpp  quat_funcs.h
